refactor: 알러지 태그를 Enum 타입으로 변경